# reclink

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: compare.py
crates/reclink-core/: Cargo.toml
crates/reclink-core/benches/: metrics.rs
crates/reclink-core/src/: error.rs  lib.rs  pipeline.rs  record.rs
crates/reclink-core/src/blocking/: canopy.rs  custom.rs  date.rs  exact.rs  hybrid.rs  lsh.rs  mod.rs  numeric.rs  phonetic_blocking.rs  qgram.rs  sorted_neighborhood.rs  trie.rs
crates/reclink-core/src/classify/: custom.rs  decision_tree.rs  em.rs  fellegi_sunter.rs  logistic_regression.rs  mod.rs  threshold.rs  weighted.rs
crates/reclink-core/src/cluster/: connected_components.rs  dbscan.rs  hierarchical.rs  incremental.rs  mod.rs  optics.rs  quality.rs
crates/reclink-core/src/compare/: custom.rs  date.rs  exact.rs  mod.rs  numeric.rs  phonetic.rs  string.rs
crates/reclink-core/src/index/: bk_tree.rs  bloom.rs  inverted_index.rs  minhash_index.rs  mmap_ngram.rs  mod.rs  ngram_index.rs  persistence.rs  vp_tree.rs
crates/reclink-core/src/metrics/: alignment.rs  batch.rs  composite.rs  cosine.rs  damerau_levenshtein.rs  explain.rs  gotoh.rs  hamming.rs  jaccard.rs  jaro.rs  jaro_winkler.rs  lcs.rs  levenshtein.rs  longest_common_substring.rs  mod.rs  monge_elkan.rs  needleman_wunsch.rs  ngram_similarity.rs  partial_ratio.rs  phonetic_hybrid.rs  ratcliff_obershelp.rs  scratch.rs  simd_util.rs  smith_waterman.rs  sorensen_dice.rs  streaming.rs  tfidf.rs  token_set.rs  token_sort.rs  weighted_levenshtein.rs
crates/reclink-core/src/metrics/streaming/: backpressure.rs  mod.rs
crates/reclink-core/src/phonetic/: caverphone.rs  cologne.rs  daitch_mokotoff.rs  double_metaphone.rs  metaphone.rs  mod.rs  mra.rs  nysiis.rs  phonex.rs  soundex.rs
crates/reclink-core/src/phonetic/beider_morse/: language.rs  mod.rs  rules.rs
crates/reclink-core/src/preprocess/: custom.rs  custom_tokenizer.rs  mod.rs  normalize.rs  stop_words.rs  tokenize.rs  transliterate.rs
crates/reclink-core/src/preprocess/normalize/: domain.rs  language.rs  mod.rs  text.rs
crates/reclink-core/src/preprocess/transliterate/: arabic.rs  cyrillic.rs  devanagari.rs  greek.rs  hangul.rs  hebrew.rs  mod.rs
crates/reclink-core/tests/: test_blocking.rs  test_classify.rs  test_cluster.rs  test_error.rs  test_metrics.rs  test_phonetic.rs  test_pipeline.rs  test_preprocess.rs  test_record.rs
crates/reclink-py/: Cargo.toml
crates/reclink-py/src/: arrow_interop.rs  explain.rs  lib.rs  metrics.rs  parsers.rs  phonetic.rs  polars_plugin.rs  scoring.rs
crates/reclink-py/src/pipeline/: builders.rs  config.rs
crates/reclink-wasm/: Cargo.toml
crates/reclink-wasm/src/: batch.rs  index.rs  lib.rs  metrics.rs  phonetic.rs  preprocess.rs
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: changelog.md  playground.mdx
docs-site/docs/api/: batch-operations.mdx  blocking.mdx  classifiers.mdx  cli.mdx  clustering.mdx  dataframes.mdx  evaluation.mdx  export.mdx  indexes.mdx  phonetic.mdx  pipeline.mdx  preprocessing.mdx  scoring.mdx  streaming.mdx  string-metrics.mdx
docs-site/docs/getting-started/: concepts.mdx  installation.mdx  quickstart.mdx
docs-site/docs/guides/: custom-plugins.mdx  deduplication.mdx  multilingual.mdx  name-matching.mdx  performance.mdx
docs-site/docs/playground/: batch-operations.mdx  index.mdx  indexes.mdx  phonetic.mdx  preprocessing.mdx  string-metrics.mdx
docs-site/src/: wasmPreloader.ts
docs-site/src/components/: PlaygroundEmbed.tsx  Table.module.css  Table.tsx
docs-site/src/components/playground/: BatchOperations.tsx  IndexStructures.tsx  PhoneticAlgorithms.tsx  Preprocessing.tsx  StringMetrics.tsx  WasmLoader.tsx  playground.module.css
docs-site/src/css/: custom.css
docs-site/src/hooks/: useReclink.ts
docs-site/src/pages/: index.tsx
docs-site/src/theme/: MDXComponents.tsx
playground/: Home.py  requirements.txt
playground/.streamlit/: config.toml
playground/pages/: 1_String_Metrics.py  2_Phonetic_Algorithms.py  3_Preprocessing.py  4_Batch_Operations.py  5_Indexes.py  6_Record_Linkage.py
py_src/reclink/: __init__.py  __main__.py  _core.pyi  _pandas_accessor.py  _pandas_compat.py  _polars_accessor.py  _polars_plugin.py  active_learning.py  async_api.py  benchmark.py  cli.py  evaluation.py  export.py  fuzzy_join.py  metrics.py  phonetic.py  pipeline.py  presets.py  streaming.py  threshold_optimizer.py  utils.py
src/: arrow_interop.rs  index.rs  lib.rs  metrics.rs  parsers.rs  phonetic.rs  plugins.rs  preprocess.rs  scoring.rs
src/pipeline/: builders.rs  config.rs  helpers.rs  mod.rs
tests/python/: test_active_learning.py  test_async.py  test_cli.py  test_custom_metrics.py  test_evaluation.py  test_export.py  test_fuzzy_join.py  test_incremental_cluster.py  test_index.py  test_metrics.py  test_new_features.py  test_pandas_accessor.py  test_phonetic.py  test_pipeline.py  test_plugins.py  test_polars_accessor.py  test_preprocess.py  test_tier2.py  test_utils.py
