[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "reclink"
version = "0.1.0"
description = "Blazing-fast fuzzy matching and record linkage library powered by Rust"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{name = "ByteVeda"}]
keywords = ["fuzzy-matching", "record-linkage", "string-similarity", "deduplication", "entity-resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
]

[project.urls]
Homepage = "https://github.com/ByteVeda/reclink"
Documentation = "https://docs.byteveda.org"
Repository = "https://github.com/ByteVeda/reclink"
Issues = "https://github.com/ByteVeda/reclink/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
dev = [
    "maturin>=1.7",
    "pre-commit>=4.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pandas>=1.5",
    "polars>=0.20",
    "ruff>=0.9",
    "mypy>=1.13",
]

[project.scripts]
reclink = "reclink.cli:main"

[tool.maturin]
python-source = "py_src"
module-name = "reclink._core"
manifest-path = "crates/reclink-py/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["reclink"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "reclink._core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*", "polars.*"]
ignore_missing_imports = true
