[package]
name = "reclink-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust library for fuzzy string matching and record linkage"
license = "MIT"

[dependencies]
rayon = "1.11"
unicode-normalization = "0.1"
ahash = { version = "0.8", features = ["serde"] }
thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

memmap2 = { version = "0.9", optional = true }

[features]
default = []
mmap = ["dep:memmap2"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "metrics"
harness = false
