[package]
name = "reclink-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust library for fuzzy string matching and record linkage"
license = "MIT"

[dependencies]
rayon = { version = "1.11", optional = true }
unicode-normalization = "0.1"
ahash = { version = "0.8", features = ["serde"] }
thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

memmap2 = { version = "0.9", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
mmap = ["dep:memmap2"]
streaming-backpressure = ["dep:crossbeam-channel"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "metrics"
harness = false
