[package]
name = "reclink-py"
version = "0.1.1"
edition = "2021"
description = "PyO3 bindings for the reclink library"
license = "Apache-2.0"
license-file = "../../LICENSE"
repository = "https://github.com/ByteVeda/reclink"
homepage = "https://docs.byteveda.org/reclink/"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
reclink-core = { path = "../reclink-core", features = ["parallel", "streaming-backpressure"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.24"
rayon = "1.11"
ahash = "0.8.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Optional: Polars expression plugin (version must match user's polars installation)
polars = { version = "0.53", features = ["lazy"], optional = true }
pyo3-polars = { version = "0.21", features = ["derive"], optional = true }

[features]
default = []
polars-plugin = ["dep:polars", "dep:pyo3-polars"]
