[package]
name = "reclink-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the reclink library"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
reclink-core = { path = "../reclink-core", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
