[package]
name = "reclink-wasm"
version = "0.1.1"
edition = "2021"
description = "WebAssembly bindings for the reclink library"
license = "Apache-2.0"
repository = "https://github.com/ByteVeda/reclink"
homepage = "https://docs.byteveda.org/reclink/"

[lib]
crate-type = ["cdylib"]

[dependencies]
reclink-core = { path = "../reclink-core", default-features = false }
wasm-bindgen = "0.2.114"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.91"
getrandom = { version = "0.4", features = ["wasm_js"] }
